[gd_scene load_steps=4 format=3 uid="uid://cqo4mypgj0ycr"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_1v8k6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.7, 0.7, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.2, 0.3, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.9, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Card" type="Control"]
custom_minimum_size = Vector2(120, 168)
layout_mode = 3
anchors_preset = 0
offset_right = 120.0
offset_bottom = 168.0
script = ExtResource("1_1v8k6")

[node name="CardFrame" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture_filter = 1
mouse_filter = 2

[node name="CardSprite" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
texture_filter = 1
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="InfoContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -60.0
offset_right = -8.0
offset_bottom = -8.0
mouse_filter = 2

[node name="NameLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
text = "Card Name"
label_settings = SubResource("StyleBoxFlat_1")
horizontal_alignment = 1
autowrap_mode = 2

[node name="CostLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
text = "3"
horizontal_alignment = 2

[node name="TypeLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
text = "Creature"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
text = "2/3"
horizontal_alignment = 2

[node name="Highlight" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 0)
mouse_filter = 2

[node name="TweenManager" type="Node" parent="."]